# arko_individual_project_2

./: Cargo.toml  Makefile  README.md  aapl.db
.devcontainer/: Dockerfile
.github/workflows/: CICD.yml
src/: extract.rs  load_transform.rs  main.rs  query.rs
tests/: cli_tests.rs
