[package]
name = "rust_etl_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28", features = ["bundled"] }
csv = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rustfmt = "0.9.0"
assert_cmd = "2.0" 